test: add unit tests for validators adn formatters - Add Jest configuration - Create validators utility (email, password, length) - Create formatters utility (slugify, truncate, capitalize) - Write comprehensive unit tests (38 tests) - Achieve 100% code coverage - Add test scripts to package.json

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "test": "jest --watch",
+    "test:once": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "blog",
@@ -29,10 +32,13 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prisma": "^7.3.0",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.21.0"
   }
 }
