--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   "author": "DbCooper",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.6",
     "@types/jest": "^30.0.0",
     "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
     "jest": "^30.2.0",
+    "jest-mock-extended": "^4.0.0",
     "nodemon": "^3.1.11",
     "prisma": "^7.3.0",
     "ts-jest": "^29.4.6",
