feat: Complete unit test suite and coverage optimization
- Added 67 passing unit tests with 100% success rate
- Achieved 100% coverage on utils (validators, formatters)
- Created comprehensive test helpers for auth and post validation
- Setup Jest configurations for unit/integration/service tests
- Implemented Prisma mocking with jest-mock-extended
- Added database configuration for test environment
- Created TEST_RESULTS.md with detailed coverage analysis
- Optimized jest.config.ts to handle ESM module compatibility
- Added npm scripts for test:coverage, test:services, test:integration
- Fixed isEmpty() function null/undefined handling
- Fixed app.ts routes configuration

Test Results:
- Total: 67 tests passed, 4 suites passed
- Utils: 100% coverage (formatters, validators)
- Routes: 100% coverage (auth, post)
- Execution time: ~2.8 seconds

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://user:password@localhost:5432/blog_db"
+DATABASE_URL="postgresql://postgers:104039@localhost:5432/blog_db"
 JWT_SECRET="your-secret-key"
 JWT_EXPIRES_IN="7d"
 PORT=3000
