--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgers:104039@localhost:5432/blog_db"
+DATABASE_URL="postgresql://postgers:104039@localhost:5432/blog_api"
 JWT_SECRET="your-secret-key"
 JWT_EXPIRES_IN="7d"
 PORT=3000
