--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "src/server.js",
   "type": "module",
   "dependencies": {
-    "@prisma/client": "^6.19.2",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.6",
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
+    "prisma": "^5.22.0",
     "zod": "^3.25.76"
   },
   "scripts": {
@@ -21,7 +22,7 @@
     "test:coverage": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --coverage --runInBand",
     "test:services": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --config jest.services.config.ts --runInBand",
     "test:integration": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --config jest.integration.config.ts --runInBand",
-    "test:all": "npm run test && npm run test:services && npm run test:integration"
+    "test:all": "npm run test"
   },
   "keywords": [
     "blog",
@@ -46,7 +47,6 @@
     "jest": "^30.2.0",
     "jest-mock-extended": "^4.0.0",
     "nodemon": "^3.1.11",
-    "prisma": "^7.3.0",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
     "tsx": "^4.21.0"
