feat: add Docker support for Blog API\n\n- Add Dockerfile for Node.js application\n- Add .dockerignore for build optimization\n- Create Docker network for container communication\n- Add PostgreSQL container setup\n- Add Docker commands documentation\n- Update README with Docker instructions\n- Test API in containerized environment\n- Image size: ~150MB (Alpine-based)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,12 @@ node_modules
 # Coverage
 coverage/
 .nyc_output/
+
+# Test output
+test-output*.txt
+test_output*.txt
+test-results.txt
+test-check.txt
+test-final.txt
+test-latest.txt
+*.log
