--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "blog-api",
   "version": "1.0.0",
   "description": "A RESTful API with authentication, post, and comments",
-  "main": "src/server.js",
-  "type": "module",
+  "main": "dist/src/server.js",
+
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
@@ -16,7 +16,8 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "start": "node src/server.js",
+    "build": "tsc",
+    "start": "node dist/src/server.js",
     "test": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --runInBand",
     "test:watch": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --watch --runInBand",
     "test:coverage": "cross-env NODE_ENV=test NODE_OPTIONS=--experimental-vm-modules jest --coverage --runInBand",
@@ -48,6 +49,7 @@
     "nodemon": "^3.1.11",
     "supertest": "^7.2.2",
     "ts-jest": "^29.4.6",
-    "tsx": "^4.21.0"
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
